<?xml version="1.0" encoding="utf-8"?>

<!--The following code will create the UI for the Bagel Party app  -->
<!-- I set up the screen with a linear layout and a vertical orientation -->
<!-- The background of the UI consists of 'seeded_bagel' which resides in the drawable folder -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/seeded_bagel"
    tools:context="com.example.bagelparty_sierrabaltins.MainActivity">

    <!--The TextView tag is used to insert string values in the UI -->
    <!-- The text displayed in the TextView can be modified -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/num_attend_edit_text"
        android:text="@string/number_of_people"
        android:textSize="@dimen/label_text_size" />

    <!-- The EditText tag is used to input a number for the party size -->
    <!-- 5 is the default number for party size which can be adjusted -->
    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_5" />

    <!-- Create another TextView tage that asks user for the huger level -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group" />

    <!-- The RadioGroup tag is used to include radio buttons and their layout -->
    <!-- The radio buttons are laid out horizontally -->
    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Radio button for light hunger level -->
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!-- Radio button for medium hunger level -->
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <!-- Radio button for starving hunger level -->
        <RadioButton
            android:id="@+id/starving_radio_button"
            android:text="@string/starving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <!-- Another TextView tag that displays how many packs of bagels need to be ordered -->
    <!-- The '?' in "Total bagels: ?" will be changed to a number after the user presses Calculate button -->
    <TextView
        android:id="@+id/num_bagels_text_view"
        android:text="@string/total_bagels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />

    <!-- A Button tag is used to create the Calculate button -->
    <!-- The onClick function is implemented when the user presses the button -->
    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />
</LinearLayout>